# wrapperTest

./: CMakeLists.txt  Makefile  README.md  main.c
examples/sdl_cpu_triangle/: sdl_cpu_triangle.c
examples/sdl_gpu_triangle/: basic_triangle.frag  basic_triangle.vert  sdl_gpu_triangle.c
examples/sdl_gpu_voxel/: sdl_gpu_voxel.c  voxel_raymarch.frag  voxel_raymarch.vert
examples/x11_cpu_model/: x11_cpu_model.c
examples/x11_cpu_triangle/: x11_cpu_triangle.c
scripts/: build_shadercross.sh  build_shaders.sh
shaders/: README.md  build_shadercross.sh
